# pdf_extractext

./: .dockerignore  .env  .env.example  DockerFile  README.md  STACK,md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: router.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
app/core/interfaces/: __init__.py  database.py  repository.py
app/db/: __init__.py  base.py  database.py
app/models/: __init__.py  document.py  role.py  user.py
app/repositories/: __init__.py  base.py  document_repo.py  role_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  document.py  health.py  role.py  user.py
app/services/: __init__.py  auth_service.py  document_service.py  health_service.py  pdf_service.py  user_service.py
migrations/: MIGRATIONS_GUIDE.md  __init__.py  __main__.py  cli.py  config.py  exceptions.py  logger.py  registry.py  runner.py
migrations/versions/: 001_create_indexes.py  002_add_status_field.py  003_transform_document_fields.py  004_add_user_metadata.py  005_create_users_and_roles.py  006_add_document_timestamps.py  __init__.py
tests/: __init__.py  conftest.py  test_db.py  test_document_repo.py  test_migrations.py  test_pdf_service.py  test_role_repository.py  test_user_repository.py
tests/api/: __init__.py  test_users.py
tests/integration/: test_auth_login_flow.py
tests/services/: test_auth_service.py  test_document_service.py  test_health_service.py  test_user_service.py
tests/unit/: test_services.py
(+23 files in other folders)
