[project]
name = "pdf-extractext"
version = "0.1.0"
description = "PDF Text Extraction API with MongoDB - FastAPI Clean Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "beanie>=1.26.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pymongo>=4.10.0",
    "PyJWT>=2.10.1",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "pypdf>=5.1.0",
    "pytest>=9.0.3",
    "app>=0.0.1",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.49",
    "aiosqlite>=0.22.1",
    "pymupdf>=1.27.2.2",
    "mongomock>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mongomock-motor>=0.0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests que requieren servicios externos (MongoDB)",
]


[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "mongomock-motor>=0.0.29",
]
